Unnecessary horizontal scroll bar on mobile / tablet preview - fix (DT-955)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1853,12 +1853,8 @@ footer .widget.profile .twitter span {
 
 
     .widget.extendednavigation .bk-overlay {
-      width: 200px;
-      height: 85px;
-      float: right;
       top: -85px !important;
-      left: 90% !important;
-  }
+    }
 
 
     .widget.extendednavigation {
